--- a/.gitconfig
+++ b/.gitconfig
@@ -2,17 +2,17 @@
     co = checkout
     st = status
     hist = log --decorate --graph --oneline --date-order
-    summary = log --abbrev-commit --pretty=oneline --author="Matthew K. Turner" --since=last.mon --reverse
+    summary = log --abbrev-commit --pretty=oneline --author="matthewkturner" --since=last.mon --reverse
 [branch]
     autosetupmerge = always
 [core]
     excludesfile = ~/.gitignore_global
 [color]
-    ui = auto
-    diff = auto
-    status = auto
-    interactive = auto
-    grep = auto
+    ui = true
+    diff = true
+    status = true
+    interactive = true
+    grep = true
 [github]
     user = matthewkturner
 [pull]
